2016-04-25  c.hetherington  <cth@carlh.net>

	* Fix saving of modified video frame rates for subtitle content.

2016-04-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.15 released.

2016-04-25  Carl Hetherington  <cth@carlh.net>

	* Add cancel option to confirmation dialogue when closing
	the program (#847).

	* Move the reel markers to the top of the timeline (#846).

2016-04-22  c.hetherington  <cth@carlh.net>

	* Arrange buttons to consume less vertical space in the
	KDM creator (#833).

	* Select active channels on opening audio analysis (#802).

	* Disallow KDM until times from being before from times (#821).

	* Warn when loading certificates from files that have
	other stuff after the certificate (#805).

	* Separate left-only and right-only video content
	in the timeline (#845).

2016-04-21  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-04-19  c.hetherington  <cth@carlh.net>

	* Updated cs_CZ translation from Tomáš Begeni.

2016-04-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.14 released.

2016-04-18  Carl Hetherington  <cth@carlh.net>

	* Possibly fix strange paths when uploading DCPs using
	FTP/SCP.

2016-04-17  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-04-15  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

	* Fix forcing of the "video frame rate" for audio content.

	* Updated ru_RU and uk_UA translations from Igor Voytovich.

2016-04-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.13 released.

2016-04-14  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

	* Version 2.7.12 released.

2016-04-11  Carl Hetherington  <cth@carlh.net>

	* Hopefully fix strange limits on x/y offset of subtitles.

	* Add UTC-3:30 timezone to Cinema configuration (#831).

	* Add option to preview left or right eye (#809).

2016-04-09  Carl Hetherington  <cth@carlh.net>
